// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots navigation/Breadcrumb Breadcrumbs 1`] = `
<div
  className="sc-ciSkZP eyAhli"
>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL csKvIw"
      color="primary"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    <a
      className="sc-giAqHp gZyfxW sc-carFqZ kFspHF"
      color="primary"
      size="md"
    >
      Address Book
    </a>
    <p
      className="sc-crzoAE iKEuEX"
      color="placeHolder"
      size="md"
    >
      (
      8
      )
    </p>
  </div>
  <p
    className="sc-crzoAE iKEuEX"
    color="placeHolder"
    size="md"
  >
    /
  </p>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <p
      className="sc-crzoAE iKEuEX sc-iTVJFM hlMyma"
      color="placeHolder"
      size="md"
    >
      Second Level
    </p>
  </div>
</div>
`;

exports[`Storyshots navigation/Breadcrumb Counter 1`] = `
<div
  className="sc-ciSkZP eyAhli"
>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL csKvIw"
      color="primary"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    <a
      className="sc-giAqHp gZyfxW sc-carFqZ kFspHF"
      color="primary"
      size="md"
    >
      Address Book
    </a>
    <p
      className="sc-crzoAE iKEuEX"
      color="placeHolder"
      size="md"
    >
      (
      8
      )
    </p>
  </div>
</div>
`;

exports[`Storyshots navigation/Breadcrumb Full Options 1`] = `
<div
  className="sc-ciSkZP eyAhli"
>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL csKvIw"
      color="primary"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    <a
      className="sc-giAqHp gZyfxW sc-carFqZ kFspHF"
      color="primary"
      size="md"
    >
      First level
    </a>
    <p
      className="sc-crzoAE iKEuEX"
      color="placeHolder"
      size="md"
    >
      (
      8
      )
    </p>
  </div>
  <p
    className="sc-crzoAE iKEuEX"
    color="placeHolder"
    size="md"
  >
    /
  </p>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL OivPn"
      color="placeHolder"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE iKEuEX sc-iTVJFM hlMyma"
      color="placeHolder"
      size="md"
    >
      Second level
    </p>
    <p
      className="sc-crzoAE iKEuEX"
      color="placeHolder"
      size="md"
    >
      (
      8
      )
    </p>
  </div>
  <p
    className="sc-crzoAE iKEuEX"
    color="placeHolder"
    size="md"
  >
    /
  </p>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL OivPn"
      color="placeHolder"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE iKEuEX sc-iTVJFM hlMyma"
      color="placeHolder"
      size="md"
    >
      Third level
    </p>
    <p
      className="sc-crzoAE iKEuEX"
      color="placeHolder"
      size="md"
    >
      (
      8
      )
    </p>
  </div>
</div>
`;

exports[`Storyshots navigation/Breadcrumb Root Element Alone 1`] = `
<div
  className="sc-ciSkZP eyAhli"
>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL csKvIw"
      color="primary"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M12.984 11.608l1.302-1.322c.384-.384 1.024-.384 1.408 0 .384.384.384 1.024 0 1.408l-2.966 3.008c-.191.191-.448.298-.704.298-.256 0-.511-.107-.704-.298l-3.03-3.008c-.426-.427-.383-1.152.13-1.515.404-.298.98-.213 1.322.15l1.13 1.108.129.022V1.982c0-.555.447-.982.98-.982.577 0 1.004.448 1.004.982v9.626zM4.984 4.392l1.302 1.322c.384.384 1.024.384 1.408 0 .384-.384.384-1.024 0-1.408L4.728 1.298C4.537 1.107 4.28 1 4.024 1c-.256 0-.511.107-.704.298L.29 4.306c-.426.427-.383 1.152.13 1.515.404.298.98.213 1.322-.15l1.13-1.108.129-.022V14.018c0 .555.447.982.98.982.577 0 1.004-.448 1.004-.982V4.392z"
          />
        </g>
      </svg>
    </span>
    <a
      className="sc-giAqHp gZyfxW sc-carFqZ kFspHF"
      color="primary"
      size="md"
    >
      Transactions
    </a>
  </div>
</div>
`;

exports[`Storyshots navigation/Breadcrumb Sub Section 1`] = `
<div
  className="sc-ciSkZP eyAhli"
>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <span
      className="sc-iqAclL csKvIw"
      color="primary"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M10.006 3c-2.762 0-5 2.238-5 5s2.238 5 5 5c2.76 0 5-2.238 5-5s-2.24-5-5-5m0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3"
          />
          <path
            className="icon-color"
            d="M3.427 3.65C1.936 4.535 1 6.18 1 8c0 1.821.937 3.467 2.428 4.35.475.281 1.088.124 1.37-.35.281-.476.124-1.09-.351-1.37C3.565 10.106 3 9.114 3 8s.564-2.106 1.448-2.63c.475-.283.631-.896.35-1.371-.283-.475-.896-.631-1.371-.35z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </span>
    <a
      className="sc-giAqHp gZyfxW sc-carFqZ kFspHF"
      color="primary"
      size="md"
    >
      Assets
    </a>
  </div>
  <p
    className="sc-crzoAE iKEuEX"
    color="placeHolder"
    size="md"
  >
    /
  </p>
  <div
    className="sc-jcwpoC tWYIb"
  >
    <p
      className="sc-crzoAE iKEuEX sc-iTVJFM hlMyma"
      color="placeHolder"
      size="md"
    >
      Coins
    </p>
  </div>
</div>
`;
